@@ -6,8 +6,10 @@ gttglade_DATA =			\
   interval_popup.glade		\
   journal.glade			\
   not-implemented.glade		\
+  plugin.glade			\
   prefs.glade			\
   project_properties.glade	\
+  task_popup.glade		\
   task_properties.glade
 
 EXTRA_DIST = 			\
