@@ -184,7 +184,7 @@ prop_task_dialog_new (void)
 
 	dlg = g_malloc(sizeof(PropTaskDlg));
 
-	gtxml = glade_xml_new ("glade/task_properties.glade", "Task Properties");
+	gtxml = gtt_glade_xml_new ("glade/task_properties.glade", "Task Properties");
 	dlg->gtxml = gtxml;
 
 	dlg->dlg = GNOME_PROPERTY_BOX (glade_xml_get_widget (gtxml,  "Task Properties"));
