@@ -1,3 +1,11 @@
+Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
+	  props-proj.c, props-task.c, util.[ch]:  Add a function for 
+	  getting the GladeXML from the right directory.
+
+	* glade/Makefile.am: dist all glade files
+
 Thu Oct 04 21:37:11 2001  George Lebl <jirka@5z.com>
 
 	* ghtml.c: more 64bit fixes.  Guile uses int and not size_t for the
